# TIS3IL-WS25-Elias-Teubner

./: .env.example  .gitignore  Exercise2.md  Exercise3.md  Exercise4.md  Exercise5.md  Exercise6.md  Exercise7.md  README.md  mkdocs.yml  pyproject.toml
Exercise2/: prepare_m5_data.ipynb
Exercise3/: load_postgres.ipynb
Exercise4/: build_sales_analysis.ipynb
Exercise5/: forecast_dept_monthly.ipynb
Exercise6/: advanced_forecasts.ipynb
Exercise7/: hierarchical_forecasts.ipynb
data/processed/: exercise2_data_summary.json  exercise4_category_summary.csv  exercise4_revenue_by_year.csv  exercise4_revenue_by_year_store.csv  exercise4_store_year_revenue_filtered.csv  exercise4_store_year_revenue_unfiltered.csv  exercise4_top_revenue_day.csv  exercise4_top_sales_day.csv  exercise5_results.csv  exercise6_results.csv  exercise7_results.csv
docs/: exercise2_m5_data.md  exercise3_database_io.md  exercise4_revenue_analysis.md  exercise5_monthly_forecasting.md  exercise6_ml_neural.md  exercise7_hierarchical.md
src/tis3il/: __init__.py  m5_utils.py
tests/: test_exercise4.py
